# SemanticFrames

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: construction_robotics_demo.py  test_system_structure.py
output/blueprints/building/: building_blueprint.json
output/blueprints/robotics/: robotics_blueprint.json
output/examples/building/: office_building.json
output/examples/robotics/: industrial_mobile_robot.json
output/extractions/: test_extraction_results.json
output/frames/building/: Building.json  Component.json  Process.json  README.md  System.json
output/frames/robotics/: Action.json  Capability.json  Component.json  README.md  Robot.json
src/: __init__.py  annotation_tool.py  frame_semantic_reasoner.py  graphrag_frame_system.py  llm_on_benchmark_text.py  proper_comparison.py  semantic_extraction_system.py  semantic_knowledge_system.py  web_annotation_tool.py
src/processing/: XMLToJSONParser.py  extract_norms_text.py  parse_resource_pdfs.py
templates/: annotation_interface.html
tests/: final_validation.py  test_comprehensive.py  test_extraction_system.py  test_scenarios.py
tools/: quick_test.py  semantic_visualizer.py  test_annotation_tool.py  test_visualizer.py
